AUGREL/src/objects/Forms_LogicConfiguration__c.object
<CustomObject>
    <fields>
        <fullName>Document_Object__c</fullName>
        <description>name of the document request object field</description>
        <label>Document Object</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logic_Condition__c</fullName>
        <label>Logic Condition</label>
        <picklist>
            <picklistValues>
                <fullName>IF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MigrationID__c</fullName>
        <externalId>true</externalId>
        <label>MigrationID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <picklist>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>=</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referecen_Attribute__c</fullName>
        <description>This field will be used as input for logic</description>
        <label>Referecen Attribute</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>expression__c</fullName>
        <label>expression</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>failValue__c</fullName>
        <label>failValue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>referenceValue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>referenceValue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>successValue__c</fullName>
        <label>successValue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>value__c</fullName>
        <label>value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Forms Logic Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MigrationID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Forms_LogicConfiguration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forms Logic Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>